<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ExcellentEnchants</artifactId>
        <groupId>su.nightexpress.excellentenchants</groupId>
        <version>4.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>Core</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>md_5-releases</id>
            <url>https://repo.md-5.net/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>lumine-repo</id>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>lumine-snapshot</id>
            <url>http://mvn.lumine.io/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>fr.neatmonster</groupId>
            <artifactId>nocheatplus</artifactId>
            <version>3.16.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>Mythic-Dist</artifactId>
            <version>5.6.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.excellentenchants</groupId>
            <artifactId>API</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.excellentenchants</groupId>
            <artifactId>NMS</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.excellentenchants</groupId>
            <artifactId>V1_19_R3</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.excellentenchants</groupId>
            <artifactId>V1_20_R1</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.excellentenchants</groupId>
            <artifactId>V1_20_R2</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.excellentenchants</groupId>
            <artifactId>V1_20_R3</artifactId>
            <version>4.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory> <!-- (your resources folder location) -->
                <filtering>true</filtering> <!-- this is the important part, it's what replaces, filters, all placeholders in the resources folder (such as ${project.version} in plugin.yml) -->
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <!-- Java 16 Fix -->
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>9.2</version>
                    </dependency>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm-commons</artifactId>
                        <version>9.2</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.parent.basedir}\target\${project.parent.name}-${project.version}.jar</outputFile>
                            <artifactSet>
                                <includes>
                                    <include>su.nightexpress.excellentenchants*</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>